src/test/ui/issues/issue-3668-2.stderr
error[E0435]: attempt to use a non-constant value in a constant
  --> $DIR/issue-3668-2.rs:2:27
   |
LL |     static child: isize = x + 1;
   |                           ^ non-constant value

error: aborting due to previous error

For more information about this error, try `rustc --explain E0435`.
